// Copyright Â© 2021-2022 Durudex

// This file is part of Durudex: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.

// Durudex is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.

// You should have received a copy of the GNU Affero General Public License
// along with Durudex. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package durudex.email;

option go_package = "github.com/durudex/durudex-email-service/internal/delivery/grpc/pb;pb";

import "internal/delivery/grpc/pb/types/status.proto";

service EmailService {
  rpc SendEmailUserCode(SendEmailUserCodeRequest) returns (types.Status);
  rpc SendEmailUserLoggedIn(SendEmailUserLoggedInRequest) returns (types.Status);
  rpc SendEmailUserRegister(SendEmailUserRegisterRequest) returns (types.Status);
}

message SendEmailUserCodeRequest {
  string email = 1;
  string username = 2;
  uint64 code = 3;
}

message SendEmailUserLoggedInRequest {
  string email = 1;
  string ip = 2;
}

message SendEmailUserRegisterRequest {
  string email = 1;
  string username = 2;
}

