// Copyright Â© 2021 Durudex

// This file is part of Durudex: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.

// Durudex is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.

// You should have received a copy of the GNU Affero General Public License
// along with Durudex. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package durudex.notif;

option go_package = "github.com/Durudex/durudex-notif-service/internal/delivery/grpc/protobuf;protobuf";

import "internal/delivery/grpc/protobuf/types/status.proto";

service NotifService {
  rpc UserCode(UserCodeRequest) returns (types.status.Status);
  rpc UserLoggedIn(UserLoggedInRequest) returns (types.status.Status);
}

message UserCodeRequest {
  string email = 1;
  string name = 2;
  uint64 code = 3;
}

message UserLoggedInRequest {
  string email = 1;
  string ip = 2;
}
